--- a/sass/src/scss/component/_footer.scss
+++ b/sass/src/scss/component/_footer.scss
@@ -1,10 +1,8 @@
-/* footer */
-
 .footer {
   padding: 30px 0;
   display: flex;
   justify-content: space-between;
-  border-top: 2px solid var(--clr-grey);
+  border-top: 2px solid $grey;
 }
 
 .footer__nav {
@@ -20,14 +18,14 @@
   content: "";
   width: 2px;
   height: 100%;
-  background: var(--clr-grey);
+  background: $grey;
   position: absolute;
   right: -10px;
   top: 0;
 }
 
 .footer__copyright {
-  color: var(--clr-grey);
+  color: $grey;
   margin-top: 8px;
 }
 
@@ -58,27 +56,4 @@
 
 .address__list--links {
   background: url("../../img/links.svg") no-repeat;
-}
-
-/* mobile */
-.footer {
-  margin: 0 10px;
-}
-
-.footer__nav--text {
-  margin: 0 25px 0 0;
-}
-
-.footer__link {
-  font-size: 8px;
-  font-weight: bold;
-}
-
-.footer__copyright {
-  font-size: 12px;
-}
-
-.adress__icon,
-.address__list--facebook {
-  background-size: 70%;
 }
