--- a/sass/src/scss/component/_home.scss
+++ b/sass/src/scss/component/_home.scss
@@ -1,23 +1,8 @@
-/*variable */
-:root {
-  --clr-primary: #34aca7;
-  --clr-white: #fff;
-  --clr-black: #000;
-  --clr-grey: #e5e5e5;
-  --clr-grey--hover: #e5e5e581;
-  --clr-sky: #eff8f7;
-  --clr-sky-dark: #d9efec;
-  --clr-gradient: linear-gradient(180deg, #f4f3f3 0%, #bbb9b9 100%);
-  --clr-gradient--hover: linear-gradient(180deg, #d4d1d1 0%, #ece4e4 100%);
-  --clr-primary_links: #34aca69d;
-  --transition: all 0.75s ease;
-}
-
 html,
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
-  color: var(--clr-black);
+  color: $black;
 }
 
 *,
@@ -33,13 +18,13 @@ img {
 }
 
 a {
-  color: var(--clr-primary);
+  color: $primary;
   text-decoration: none;
   display: block;
 }
 
 a:hover {
-  color: var(--clr-primary_links);
+  color: $primary_links;
 }
 
 .visually-hidden {
@@ -64,4 +49,13 @@ a:hover {
   max-width: 100%;
   height: 100vh;
   margin: 0 auto;
+}
+
+.aside-banner {
+  max-width: 17%;
+  padding-right: 1%;
+}
+
+.main {
+  max-width: 83%;
 }
