--- a/sass/src/scss/component/_tabs.scss
+++ b/sass/src/scss/component/_tabs.scss
@@ -1,7 +1,10 @@
 .wrapper-tabs {
-    display: flex;
-    justify-content: space-between;
+    @include flexes;
     width: 100%;
+
+    @include response(tablate) {
+        display: none;
+    }
 }
 
 .tabs__list {
@@ -9,24 +12,24 @@
     margin-right: 2px;
     padding: 24px 0 24px 20px;
     flex-grow: 1;
-}
 
-.tabs__list:nth-child(n + 3) {
-    margin-right: 0;
-}
+    &:nth-child(n + 3) {
+        margin-right: 0;
+    }
 
-.tabs__list:hover {
-    background: $sky-dark;
-    transition: $transition;
+    &:hover {
+        background: $sky-dark;
+        transition: $transition;
+    }
 }
 
 .list--item {
-    font-size: 18px;
+    font-size: $fontSize + 2;
     line-height: 20px;
 }
 
 .item-text {
-    font-size: 10px;
+    font-size: $fontSize - 6;
     line-height: 19px;
     font-style: italic;
 }
