--- a/sass/src/scss/component/_card.scss
+++ b/sass/src/scss/component/_card.scss
@@ -1,16 +1,38 @@
-/* card */
 .section-card {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  @include flexWrap;
+  margin-top: $marginTop + 22;
+  margin-bottom: $marginBottom + 22;
   line-height: 1;
   width: 100%;
+
+  @include response(phone) {
+    display: flex;
+    flex-direction: column;
+    padding-right: 30px;
+    padding-left: 30px;
+
+  }
 }
 
 .article__card {
   width: calc(24% - 1.5rem);
+
+  @include response(tablate) {
+    width: calc(50% - 1rem);
+    margin-bottom: 2rem;
+
+    &:nth-child(n + 4) {
+      margin-bottom: 0;
+    }
+  }
+
+  @include response(phone) {
+    width: 100%;
+
+    &:nth-child(n + 3) {
+      margin-bottom: 2rem;
+    }
+  }
 }
 
 .card--img {
@@ -20,7 +42,7 @@
 }
 
 .card__list--text {
-  margin-top: 20px;
+  margin-top: $marginTop + 10;
 }
 
 .items--text {
@@ -29,18 +51,21 @@
 }
 
 .card__title {
-  font-size: 16px;
+  font-size: $fontSize;
   line-height: 1.5;
 }
+
 .card__text {
   margin: 15px 0;
+  margin-top: $marginTop + 5;
+  margin-bottom: $marginBottom + 5;
   line-height: 1.3;
 }
 
 .card__date {
   color: $grey;
-}
 
-.card__date:hover {
-  color: $grey--hover;
+  &:hover {
+    color: $grey--hover;
+  }
 }
